# new-python-github-project

./: .gitignore  .pre-commit-config.yaml  .push_origin.sh  .pylintrc  .python-version  CLAUDE.md  Makefile  README.md  debugging.html  development.html  genindex.html  index.html  installation.html  introduction.html  mypy.ini  objects.inv  pyproject.toml  search.html  searchindex.js  source.html  todo.html  tox.ini
.cursor/rules/: project-rule.mdc  python.mdc
.github/workflows/: ci.yml  doc_pages.yml
_sources/: development.rst.txt  index.rst.txt  todo.rst.txt
docker/: Dockerfile  build-docker.sh
docker/container/: create_venv.sh  install_gedit.sh  install_poetry.sh  install_uv.sh
docs/: conf.py  debugging.rst  development.rst  index.rst  installation.rst  introduction.rst  source.rst  todo.rst
icons/hicolor/: index.theme
resources/linux/: new-python-github-project.desktop
scripts/: run-coverage.sh
src/new_python_github_project/: config.py  constants.py  create.py  helpers.py  logging_handlers.py  main.py  main_window.py  runtime.py  task.py
src/new_python_github_project/data/: default_config.ini
src/new_python_github_project/data/templates/: pyproject.toml
tests/: common.py  conftest.py  test_config.py  test_helpers.py  test_logging_handlers.py  test_main.py  test_main_window.py  test_task.py
