[project]
name = "new-python-github-project"
version = "0.1.0"
description = "Create a new Python project on GitHub"
authors = [
    { name = "Håkon Hægland", email = "hakon.hagland@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sphinx>=7.2.5,<8.0.0",
    "click>=8.1.7,<9.0.0",
    "sphinx-click>=6.0.0",
    "platformdirs>=4.1.0,<5.0.0",
    "pyqt6>=6.9.0",
    "debugpy>=1.8.0",
]

[tool.uv]
dev-dependencies = [
    "coverage>=7.6.1",
    "mypy>=1.11.2",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.3",
    "ruff>=0.6.6",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx>=7.0.0",
    "sphinx-click>=6.0.0",
    "types-click>=7.1.8",
    "types-colorama>=0.4.15.20240311",
    "pre-commit>=3.8.0",
    "rstcheck>=6.2.4",
    "tox>=4.20.0",
    "pytest-qt>=4.5.0",
    "pytest-xvfb>=3.1.1",
    "sphinx-autodoc-typehints>=2.3.0",
]

[project.scripts]
new-python-gh-project = "new_python_github_project.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/new_python_github_project"]

[tool.hatch.build.targets.wheel.shared-data]
"icons/hicolor" = "share/icons/hicolor"
"resources/linux/new-python-github-project.desktop" = "share/applications/new-python-github-project.desktop"

[tool.ruff]
exclude = [
    "src/new_python_github_project/data/templates/"
]

[tool.coverage.report]
fail_under = 20

# Configure pytest to run Qt applications in headless mode for local development
# This ensures consistent behavior across all platforms (macOS, Linux, Windows)
# when running tests via pytest, make test, make coverage, or pre-commit hooks
# Note: --no-xvfb disables pytest-xvfb on macOS where it conflicts with QT_QPA_PLATFORM
[tool.pytest.ini_options]
addopts = "--no-xvfb"
env = [
    "QT_QPA_PLATFORM=offscreen"
]
