[project]
name = "new-python-github-project"
version = "0.1.0"
description = "Create a new Python project on GitHub"
authors = [
    { name = "Håkon Hægland", email = "hakon.hagland@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sphinx>=7.2.5,<8.0.0",
    "click>=8.1.7,<9.0.0",
    "sphinx-click>=6.0.0",
    "platformdirs>=4.1.0,<5.0.0",
    "pyqt6>=6.9.0",
    "debugpy>=1.8.0",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
]

[tool.uv]
dev-dependencies = [
    "coverage>=7.6.1",
    "mypy>=1.17.0",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.3",
    "ruff>=0.6.6",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx>=7.0.0",
    "sphinx-click>=6.0.0",
    "types-click>=7.1.8",
    "types-colorama>=0.4.15.20240311",
    "pre-commit>=3.8.0",
    "rstcheck>=6.2.4",
    "tox>=4.20.0",
    "pytest-qt>=4.5.0",
    "pytest-xvfb>=3.1.1",
    "sphinx-autodoc-typehints>=2.3.0",
    "sphinx-click-rst-to-ansi-formatter>=0.1.1",
    "types-requests>=2.32.0.20240914",
]

[project.scripts]
new-python-gh-project = "new_python_github_project.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/new_python_github_project"]

[tool.hatch.build.targets.wheel.shared-data]
"icons/hicolor" = "share/icons/hicolor"
"resources/linux/new-python-github-project.desktop" = "share/applications/new-python-github-project.desktop"

[tool.ruff]
exclude = [
    "src/new_python_github_project/data/templates/"
]

[tool.ruff.lint]
# Enable import sorting rules to catch import organization issues
select = ["I"]

[tool.ruff.lint.isort]
# Configure import sorting to match CLAUDE.md standards
# Order: standard library → third-party → local (alphabetically sorted)
known-first-party = ["new_python_github_project"]
split-on-trailing-comma = true

[tool.coverage.report]
fail_under = 100

# Configure pytest with --no-xvfb for Windows and WSL environments
# This prevents tests from hanging in WSL where Xvfb handling is problematic
# Platform behavior with --no-xvfb:
# - Windows: Uses native Windows GUI handling (no Xvfb available)
# - WSL: Prevents hanging by skipping Xvfb setup, uses Windows display
# - Native Linux: GUI windows will appear (use 'make tests-xvfb' for headless)
# - macOS: GUI windows will appear (Makefile sets QT_QPA_PLATFORM=offscreen for headless)
[tool.pytest.ini_options]
addopts = "--no-xvfb"
