[project]
name = "%%PROJECT_NAME%%"
version = "0.1.0"
description = "%%PROJECT_DESCRIPTION%%"
authors = [
    { name = "%%AUTHOR_NAME%%", email = "%%AUTHOR_EMAIL%%" }
]
readme = "README.md"
requires-python = ">=%%PYTHON_VERSION%%"
dependencies = [
    "click>=8.1.7,<9.0.0",
    "sphinx-autodoc-typehints>=2.0.0",
    "sphinx-click-rst-to-ansi-formatter>=0.1.4",
]

[tool.uv]
dev-dependencies = [
    "coverage>=7.6.1",
    "mypy>=1.11.2",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.3",
    "ruff>=0.6.6",
    "sphinx>=7.2.5,<8.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx>=7.0.0",
    "sphinx-click>=6.0.0",
    "types-click>=7.1.8",
    "types-colorama>=0.4.15.20240311",
    "pre-commit>=3.8.0",
    "rstcheck>=6.2.4",
    "tox>=4.20.0",
]

[project.scripts]
new-python-gh-project = "new_python_github_project.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/new_python_github_project"]

[tool.coverage.report]
fail_under = 100
